[workspace]
members = [
    "divoom",
    "divoom_cli"
]

[profile.dev]
panic = "abort"             # Abort on panic to make it more friendly for debugger

[profile.release]
opt-level = 'z'             # Optimize for size.
lto = true                  # Enable link time optimization
codegen-units = 1           # Using 1 codegen units to help getting more optimization on binary size.
panic = 'abort'             # Avoid generating stack unwind code.
