[package]
name = "divoom"
version = "0.0.1"
authors = ["r12f <r12f.code@gmail.com>"]
edition = "2021"
description = "Rust API for controlling divoom devices, like pixoo."
license = "Apache-2.0"
keywords = ["divoom", "pixoo"]
categories = ["api-bindings"]
repository = "https://github.com/r12f/divoom"
exclude = [
    "test_data/*",
]

[dependencies]
reqwest = "0.11"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
env_logger = "0.9"
contracts = "0.6"
tokio = { version = "1.13", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rgb = "0.8"
base64 = "0.13"
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
shellwords = "1.1"
tokio-cron-scheduler = "0.9.4"
glob = "0.3"
rand = "0.8"
tiny-skia = { version = "0.6", optional = true, features = ["std", "simd"]}
image = { version = "0.24", optional = true }
resvg = { version = "0.23", optional = true }
usvg = { version = "0.23", optional = true }
regex = { version = "1", optional = true }
lazy_static = "1.4"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.29", features = ["vendored"] }

[dev-dependencies]
pretty_assertions = "1.0"
mockito = "0.31"

[features]
default = ["animation-builder"]
animation-builder = ["dep:tiny-skia", "dep:image", "dep:resvg", "dep:usvg", "dep:regex"]