[package]
name = "divoom-gateway"
version = "0.0.1"
authors = ["r12f <r12f.code@gmail.com>"]
edition = "2021"
description = "A REST API gateway with swagger UI provided for controlling divoom devices."
license = "Apache-2.0"
keywords = ["divoom", "pixoo"]
categories = ["command-line-utilities"]
repository = "https://github.com/r12f/divoom"
build = "build.rs"

[dependencies]
log = "0.4.14"
tracing = { version = "0.1.29", features = ["log"] }
env_logger = "0.9.0"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
thiserror = "1.0.30"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9"
rgb = "0.8.33"
divoom = { version = "0.0.1", path = "../divoom" }
poem = "1"
poem-openapi = { version = "2", features = ["swagger-ui"]}
clap = { version = "3.2.16", features = ["derive"] }
tiny-skia = { version = "0.6", features = ["std", "simd"]}

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
pretty_assertions = "1.0.0"

[package.metadata.winres]
LegalCopyright = "Copyright (c) 2022 r12f"
